# substrate

client/network/common/src/: service.rs
client/network/src/: config.rs  lib.rs  service.rs
client/offchain/src/: api.rs
client/service/src/: builder.rs  lib.rs
frame/aura/src/: default_weights.rs  lib.rs
frame/grandpa/src/: default_weights.rs  lib.rs
primitives/core/src/offchain/: mod.rs  testing.rs
primitives/finality-grandpa/src/: lib.rs
primitives/io/src/: lib.rs
primitives/std/: Cargo.toml  out_lib.rs  with_std.rs  without_std.rs
primitives/std/src/: lib.rs
