[package]
name = "sp-std"
version = "5.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Lowest-abstraction level for the Substrate runtime: just exports useful primitives from std or client/alloc to be used with any code that depends on the runtime."
documentation = "https://docs.rs/sp-std"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.136",default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"]}


[features]
default = ["std"]
std = []
